--- a/R/GitHub.Rmd
+++ b/R/GitHub.Rmd
@@ -4,26 +4,407 @@ output: html_document
 date: "2023-05-04"
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+#End to end data analysis 
+#Data obtained from QFISH database 
+
+
+```{r}
+library(tidyverse)
 ```
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
+iris # look at iris
+str(iris) # check it out - what type is it? how many rows?
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+as_tibble(iris)
+#> # A tibble: 150 × 5
+#>   Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+#>          <dbl>       <dbl>        <dbl>       <dbl> <fct>  
+#> 1          5.1         3.5          1.4         0.2 setosa 
+#> 2          5.9         3            1.4         0.2 setosa 
+#> 3          5.7         3.2          1.3         0.2 setosa 
+#> 4          5.6         3.1          1.5         0.2 setosa 
+#> 5          5           3.6          1.4         0.2 setosa 
+#> 6          5.4         3.9          1.7         0.4 setosa 
+#> # ... with 144 more rows
 
-```{r cars}
-summary(cars)
+
 ```
 
-## Including Plots
+```{r}
+tibble(
+  x = 1:5, 
+  y = 1, 
+  z = x ^ 2 + y) # call new variables to produce new column values!
 
-You can also embed plots, for example:
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+#> # A tibble: 5 × 3
+#>       x     y     z
+#>   <int> <dbl> <dbl>
+#> 1     1     1     2
+#> 2     2     1     5
+#> 3     3     1    10
+#> 4     4     1    17
+#> 5     5     1    26
+
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+data.frame(c(
+     x = 1:5, 
+     y = 1, 
+     z = x ^ 2 + y
+))
+Error in data.frame(c(x = 1:5, y = 1, z = x^2 + y)) : 
+  object 'x' not found
+
+
+```
+```{r}
+tb <- tibble(
+  `:)` = "smile", 
+  ` ` = "space",
+  `2000` = "number"
+)
+tb
+#> # A tibble: 1 × 3
+#>   `:)`  ` `   `2000`
+#>   <chr> <chr> <chr> 
+#> 1 smile space number
+```
+```{r}
+tribble(
+  ~x, ~y, ~z,
+  #--|--|----
+  "a", 2, 3.6,
+  "b", 1, 8.5
+)
+#> # A tibble: 2 × 3
+#>   x         y     z
+#>   <chr> <dbl> <dbl>
+#> 1 a         2   3.6
+#> 2 b         1   8.5
+
+```
+
+```{r}
+as_tibble(iris)
+```
+
+```{r}
+tibble(
+  a = lubridate::now() + runif(1e3) * 86400,
+  b = lubridate::today() + runif(1e3) * 30,
+  c = 1:1e3,
+  d = runif(1e3),
+  e = sample(letters, 1e3, replace = TRUE)
+)
+#> # A tibble: 1,000 × 5
+#>   a                   b              c     d e    
+#>   <dttm>              <date>     <int> <dbl> <chr>
+#> 1 2022-11-18 23:15:18 2022-11-25     1 0.368 n    
+#> 2 2022-11-19 17:20:28 2022-11-30     2 0.612 l    
+#> 3 2022-11-19 11:44:07 2022-12-10     3 0.415 p    
+#> 4 2022-11-19 01:05:24 2022-12-09     4 0.212 m    
+#> 5 2022-11-18 21:29:41 2022-12-06     5 0.733 i    
+#> 6 2022-11-19 08:30:38 2022-12-02     6 0.460 n    
+#> # ... with 994 more rows
+
+
+```
+
+```{r}
+install.packages("nycflights13")
+library(nycflights13)
+nycflights13::flights %>% 
+  print(n = 10, width = Inf)
+
+```
+
+
+
+```{r}
+df <- tibble(
+  x = runif(5),
+  y = rnorm(5)
+)
+
+# Extract by name
+df$x
+#> [1] 0.73296674 0.23436542 0.66035540 0.03285612 0.46049161
+df[["x"]]
+#> [1] 0.73296674 0.23436542 0.66035540 0.03285612 0.46049161
+
+# Extract by row position
+df[[1]]
+#> [1] 0.73296674 0.23436542 0.66035540 0.03285612 0.46049161
+
+# Extract by exact position
+df[[2,2]]
+#[1] -1.751506
+
+```
+
+```{r}
+
+df %>% .$x
+#> [1] 0.73296674 0.23436542 0.66035540 0.03285612 0.46049161
+df %>% .[["x"]]
+#> [1] 0.73296674 0.23436542 0.66035540 0.03285612 0.46049161
+
+
+```
+
+
+```{r}
+df <- tibble(
+    xxx = runif(5),
+    y = rnorm(5)
+)
+df$xx
+NULL
+Warning message:
+Unknown or uninitialised column: `xx`. 
+
+```
+```{r}
+df <- data.frame(abc = 1, xyz = "a")
+df
+df$x #call by name
+df[, "xyz"] #call by exact position
+
+```
+
+#Importing data 
+
+#> Rows: 1192 Columns: 6
+#> ── Column specification ────────────────────────────────────────────────────────
+#> Delimiter: ","
+#> chr (2): sex, race
+#> dbl (4): earn, height, ed, age
+#> 
+#> ℹ Use `spec()` to retrieve the full column specification for this data.
+#> ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+```{r}
+read_csv("a,b,c
+1,2,3
+4,5,6")
+#> Rows: 2 Columns: 3
+#> ── Column specification ────────────────────────────────────────────────────────
+#> Delimiter: ","
+#> dbl (3): a, b, c
+#> 
+#> ℹ Use `spec()` to retrieve the full column specification for this data.
+#> ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+#> # A tibble: 2 × 3
+#>       a     b     c
+#>   <dbl> <dbl> <dbl>
+#> 1     1     2     3
+#> 2     4     5     6
+
+
+
+```
+
+
+#Tidying data using Tidyr
+
+```{r}
+library(tidyverse)
+```
+
+```{r}
+table1
+#> # A tibble: 6 × 4
+#>   country      year  cases population
+#>   <chr>       <int>  <int>      <int>
+#> 1 Afghanistan  1999    745   19987071
+#> 2 Afghanistan  2000   2666   20595360
+#> 3 Brazil       1999  37737  172006362
+#> 4 Brazil       2000  80488  174504898
+#> 5 China        1999 212258 1272915272
+#> 6 China        2000 213766 1280428583
+table2
+#> # A tibble: 12 × 4
+#>   country      year type           count
+#>   <chr>       <int> <chr>          <int>
+#> 1 Afghanistan  1999 cases            745
+#> 2 Afghanistan  1999 population  19987071
+#> 3 Afghanistan  2000 cases           2666
+#> 4 Afghanistan  2000 population  20595360
+#> 5 Brazil       1999 cases          37737
+#> 6 Brazil       1999 population 172006362
+#> # ... with 6 more rows
+table3
+#> # A tibble: 6 × 3
+#>   country      year rate             
+#> * <chr>       <int> <chr>            
+#> 1 Afghanistan  1999 745/19987071     
+#> 2 Afghanistan  2000 2666/20595360    
+#> 3 Brazil       1999 37737/172006362  
+#> 4 Brazil       2000 80488/174504898  
+#> 5 China        1999 212258/1272915272
+#> 6 China        2000 213766/1280428583
+
+# Spread across two tibbles
+table4a  # cases
+#> # A tibble: 3 × 3
+#>   country     `1999` `2000`
+#> * <chr>        <int>  <int>
+#> 1 Afghanistan    745   2666
+#> 2 Brazil       37737  80488
+#> 3 China       212258 213766
+table4b  # population
+#> # A tibble: 3 × 3
+#>   country         `1999`     `2000`
+#> * <chr>            <int>      <int>
+#> 1 Afghanistan   19987071   20595360
+#> 2 Brazil       172006362  174504898
+#> 3 China       1272915272 1280428583
+
+
+```
+
+
+```{r}
+# Compute rate per 10,000
+table1 %>% 
+  mutate(rate = cases / population * 10000)
+#> # A tibble: 6 × 5
+#>   country      year  cases population  rate
+#>   <chr>       <int>  <int>      <int> <dbl>
+#> 1 Afghanistan  1999    745   19987071 0.373
+#> 2 Afghanistan  2000   2666   20595360 1.29 
+#> 3 Brazil       1999  37737  172006362 2.19 
+#> 4 Brazil       2000  80488  174504898 5.61 
+#> 5 China        1999 212258 1272915272 1.67 
+#> 6 China        2000 213766 1280428583 1.67
+
+# Compute cases per year
+table1 %>% 
+  count(year, wt = cases)
+#> # A tibble: 2 × 2
+#>    year      n
+#>   <int>  <int>
+#> 1  1999 250740
+#> 2  2000 296920
+
+# Visualise changes over time
+library(ggplot2)
+ggplot(table1, aes(year, cases)) + 
+  geom_line(aes(group = country), colour = "grey50") + 
+  geom_point(aes(colour = country))
+
+
+```
+
+
+#Workshop 5 - Spatial data in R 
+
+#Using R as GIS 
+
+```{r}
+# install and load your packages
+install.packages("sf") 
+install.packages("terra")
+install.packages("tmap")
+
+
+#load into R library
+library(tidyverse)
+library(sf) # simple features
+library (terra) # for raster
+library(tmap) # Thematic maps are geographical maps in which spatial data distributions are visualized
+```
+
+```{r}
+#load the copepod data into R studio
+library(readr)
+dat <- read_csv("data-for-course/copepods_raw.csv")
+dat
+```
+
+
+# A tibble: 5,313 × 11
+   silk_id segment_no latitude longitude sample_time_utc  project route vessel  
+     <dbl>      <dbl>    <dbl>     <dbl> <chr>            <chr>   <chr> <chr>   
+ 1       1          1    -28.3      154. 26/06/2009 22:08 AusCPR  BRSY  ANL Win...
+ 2       1          5    -28.7      154. 26/06/2009 23:12 AusCPR  BRSY  ANL Win...
+ 3       1          9    -29.0      154. 27/06/2009 0:17  AusCPR  BRSY  ANL Win...
+ 4       1         13    -29.3      154. 27/06/2009 1:22  AusCPR  BRSY  ANL Win...
+ 5       1         17    -29.7      154. 27/06/2009 2:26  AusCPR  BRSY  ANL Win...
+ 6       1         18    -29.8      154. 27/06/2009 2:43  AusCPR  BRSY  ANL Win...
+ 7       1         26    -30.4      153. 27/06/2009 4:52  AusCPR  BRSY  ANL Win...
+ 8       1         30    -30.7      153. 27/06/2009 5:57  AusCPR  BRSY  ANL Win...
+ 9       1         33    -31.0      153. 27/06/2009 6:45  AusCPR  BRSY  ANL Win...
+10       1         37    -31.3      153. 27/06/2009 7:50  AusCPR  BRSY  ANL Win...
+# ... with 5,303 more rows, and 3 more variables: meanlong <dbl>, region <chr>,
+#   richness_raw <dbl>
+
+
+```{r}
+qfish_data <- read_csv("C:\\Users\\Rhea Arya\\Desktop\\QFISH.csv")
+QFISH
+qfish_data$Year_No <- as.integer(qfish_data$`Calendar Year`)
+```
+
+```{r}
+library(ggplot2)
+ggplot(dat) + 
+  aes(x = longitude, y = latitude, color = richness_raw) +
+  geom_point()
+
+
+```
+
+```{r}
+ggplot(dat, aes(x = latitude, y = richness_raw)) + 
+  stat_smooth() + 
+  geom_point()
+```
+
+
+```{r}
+sdat <- st_as_sf(dat, coords = c("longitude", "latitude"), 
+                 crs = 4326)
+```
+```{r}
+crs4326 <- st_crs(4326)
+crs4326 # look at the whole CRS
+crs4326$Name # pull out just the name of the crs
+[1] "WGS 84"
+
+
+```
+```{r}
+sdat
+plot(sdat["richness_raw"])
+
+
+```
+
+```{r}
+#using tmap
+
+tm_shape(sdat) + 
+  tm_dots(col = "richness_raw")
+
+
+```
+
+
+```{r}
+
+```
+
+
+
+
+
+
+
+
+
